Code refactoring, tests added
--Added additional tests for the ChannelService class

--Refactoring old code