@@ -1,12 +1,12 @@
-package com.example.demo.unittesting;
+package com.example.demo.service.imp;
 
 
 import com.example.demo.model.Category;
 import com.example.demo.model.Playlist;
 import com.example.demo.model.Video;
-import com.example.demo.model.VideoPlaylistOrder;
+import com.example.demo.model.VideoPlaylist;
 import com.example.demo.repo.PlaylistRepo;
-import com.example.demo.repo.VideoPlaylistOrderRepo;
+import com.example.demo.repo.VideoPlaylistRepo;
 import com.example.demo.repo.VideoRepo;
 import com.example.demo.service.PlaylistService;
 import com.example.demo.service.PlaylistVideoService;
@@ -24,7 +24,6 @@ import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
 
-import static org.assertj.core.api.Assertions.assertThat;
 import static org.mockito.Mockito.when;
 
 @SpringBootTest
@@ -40,7 +39,7 @@ public class PlaylistVideoServiceVideoIndexTests {
     VideoRepo videoRepo;
 
     @MockBean
-    VideoPlaylistOrderRepo videoPlaylistOrderRepo;
+    VideoPlaylistRepo videoPlaylistRepo;
 
     @Autowired
     PlaylistVideoService playlistVideoService;
@@ -48,59 +47,55 @@ public class PlaylistVideoServiceVideoIndexTests {
     @BeforeEach
     public void dataInit(){
 
-       Playlist playlist1 = new Playlist("Prva test plejlista" , new ArrayList<>(Arrays.asList(new Category("Horror"))));
+       Playlist playlist1 = new Playlist("Prva test plejlista" , new ArrayList<>(List.of(new Category("Horror"))));
         when(playlistService.getPlaylist("1")).thenReturn(playlist1);
-        Video video1 = new Video("Prvi test video", new ArrayList<>(Arrays.asList(new Category("Horror"))));
+        Video video1 = new Video("Prvi test video", new ArrayList<>(List.of(new Category("Horror"))));
         video1.setId("1");
         when(videoRepo.findById("1")).thenReturn(Optional.of(video1));
-        Video video2 = new Video("Drugi test video", new ArrayList<>(Arrays.asList(new Category("Thriller"))));
+        Video video2 = new Video("Drugi test video", new ArrayList<>(List.of(new Category("Thriller"))));
         video2.setId("2");
-        Video video3 = new Video("Treci test video", new ArrayList<>(Arrays.asList(new Category("Action"))));
+        Video video3 = new Video("Treci test video", new ArrayList<>(List.of(new Category("Action"))));
         video3.setId("3");
-        Video video4 = new Video("Cetvrti test video", new ArrayList<>(Arrays.asList(new Category("Comedy"))));
+        Video video4 = new Video("Cetvrti test video", new ArrayList<>(List.of(new Category("Comedy"))));
         video4.setId("4");
-        Video video5 = new Video("Peti test video", new ArrayList<>(Arrays.asList(new Category("Documentary"))));
+        Video video5 = new Video("Peti test video", new ArrayList<>(List.of(new Category("Documentary"))));
         video5.setId("5");
 
         when(videoRepo.findById("3")).thenReturn(Optional.of(video3));
         when(videoRepo.findById("2")).thenReturn(Optional.of(video2));
         when(videoRepo.findById("4")).thenReturn(Optional.of(video4));
         when(videoRepo.findById("5")).thenReturn(Optional.empty());
-        VideoPlaylistOrder vpl1 = new VideoPlaylistOrder("1",video1 , playlist1 , 1);
-        Optional<VideoPlaylistOrder> vpl2 = Optional.empty();
-        VideoPlaylistOrder vpl3 = new VideoPlaylistOrder("3",video3 , playlist1 , 2);
-        VideoPlaylistOrder vpl4 = new VideoPlaylistOrder("4",video4 , playlist1 , 3);
-        VideoPlaylistOrder vpl5 = new VideoPlaylistOrder("5",video5 , playlist1 , 4);
+        VideoPlaylist vpl1 = new VideoPlaylist("1",video1 , playlist1 , 1);
+        Optional<VideoPlaylist> vpl2 = Optional.empty();
+        VideoPlaylist vpl3 = new VideoPlaylist("3",video3 , playlist1 , 2);
+        VideoPlaylist vpl4 = new VideoPlaylist("4",video4 , playlist1 , 3);
+        VideoPlaylist vpl5 = new VideoPlaylist("5",video5 , playlist1 , 4);
 
-        when(videoPlaylistOrderRepo.getVideoPlaylistOrderByPlaylistAndVideo(playlist1, video1)).thenReturn(Optional.of(vpl1));
-        when(videoPlaylistOrderRepo.getVideoPlaylistOrderByPlaylistAndVideo(playlist1, video2)).thenReturn(vpl2);
-        when(videoPlaylistOrderRepo.getVideoPlaylistOrderByPlaylistAndVideo(playlist1, video3)).thenReturn(Optional.of(vpl3));
-        when(videoPlaylistOrderRepo.getVideoPlaylistOrderByPlaylistAndVideo(playlist1, video4)).thenReturn(Optional.of(vpl4));
+        when(videoPlaylistRepo.getVideoPlaylistByPlaylistAndVideo(playlist1, video1)).thenReturn(Optional.of(vpl1));
+        when(videoPlaylistRepo.getVideoPlaylistByPlaylistAndVideo(playlist1, video2)).thenReturn(vpl2);
+        when(videoPlaylistRepo.getVideoPlaylistByPlaylistAndVideo(playlist1, video3)).thenReturn(Optional.of(vpl3));
+        when(videoPlaylistRepo.getVideoPlaylistByPlaylistAndVideo(playlist1, video4)).thenReturn(Optional.of(vpl4));
 
-        List<VideoPlaylistOrder> playlistVideoServiceList = new ArrayList<>(Arrays.asList(vpl1, vpl3 , vpl4));
+        List<VideoPlaylist> playlistVideoServiceList = new ArrayList<>(Arrays.asList(vpl1, vpl3 , vpl4));
 
-        when(videoPlaylistOrderRepo.getVideoPlaylistOrdersByPlaylist(playlist1)).thenReturn(playlistVideoServiceList);
+        when(videoPlaylistRepo.getVideoPlaylistsByPlaylist(playlist1)).thenReturn(playlistVideoServiceList);
 
     }
 
     @Test
     public void videoChangeIndex_VideoNotExist_ShouldThrowException(){
-        Assertions.assertThrows(VideoMissingException.class, () ->{
-            playlistVideoService.videoIndex("1","5",1);
-        });
+        Assertions.assertThrows(VideoMissingException.class, () -> playlistVideoService.videoIndex("1","5",1));
     }
 
     @Test
     public void videoChangeIndex_VideoNotInPlaylist_ShouldThrowException(){
-        Assertions.assertThrows(ResourceMissingException.class, () -> {
-            playlistVideoService.videoIndex("1","2",1);
-        }
+        Assertions.assertThrows(ResourceMissingException.class, () -> playlistVideoService.videoIndex("1","2",1)
         );
     }
 
     @Test
     public void videoChangeIndex_NewIndexOutOfBounds_ShouldSetIndex(){
-        List<VideoPlaylistOrder> playlists = playlistVideoService.videoIndex("1", "1" , 20);
+        List<VideoPlaylist> playlists = playlistVideoService.videoIndex("1", "1" , 20);
         Assertions.assertEquals(3, playlists.get(0).getOrderNumber());
         Assertions.assertEquals(2, playlists.get(2).getOrderNumber());
         Assertions.assertEquals(1, playlists.get(1).getOrderNumber());
@@ -108,7 +103,7 @@ public class PlaylistVideoServiceVideoIndexTests {
 
     @Test
     public void videoChangeIndex_NewIndexLargerThanVideoIndex_ShouldSetIndex(){
-        List<VideoPlaylistOrder> playlists = playlistVideoService.videoIndex("1", "1" , 2);
+        List<VideoPlaylist> playlists = playlistVideoService.videoIndex("1", "1" , 2);
         Assertions.assertEquals(2, playlists.get(0).getOrderNumber());
         Assertions.assertEquals(3, playlists.get(2).getOrderNumber());
         Assertions.assertEquals(1, playlists.get(1).getOrderNumber());
@@ -116,7 +111,7 @@ public class PlaylistVideoServiceVideoIndexTests {
 
     @Test
     public void videoChangeIndex_NewIndexSmallerThanVideoIndex_ShouldSetIndex(){
-        List<VideoPlaylistOrder> playlists = playlistVideoService.videoIndex("1", "4" , 1);
+        List<VideoPlaylist> playlists = playlistVideoService.videoIndex("1", "4" , 1);
         System.out.println(playlists);
         Assertions.assertEquals(2, playlists.get(0).getOrderNumber());
         Assertions.assertEquals(1, playlists.get(2).getOrderNumber());
